# Quark

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
installer/arch/: .SRCINFO  PKGBUILD
installer/arch/pkg/quark-git/: .BUILDINFO  .MTREE  .PKGINFO
installer/arch/pkg/quark-git/usr/share/applications/: quark.desktop
installer/arch/quark/: FETCH_HEAD  config  packed-refs
installer/arch/quark/info/: refs
installer/arch/quark/objects/info/: packs
installer/arch/quark/objects/pack/: multi-pack-index  pack-1ad707cf6c0430e9542f99bae438c6061718593b.idx  pack-1ad707cf6c0430e9542f99bae438c6061718593b.pack  pack-1ad707cf6c0430e9542f99bae438c6061718593b.rev  pack-cb658b576f3bd7074c089c30fcf6a3c13a5475a5.idx  pack-cb658b576f3bd7074c089c30fcf6a3c13a5475a5.rev  pack-fb9ab429ebe80fade4438ecf2801e3e22c6f16da.idx  pack-fb9ab429ebe80fade4438ecf2801e3e22c6f16da.rev
installer/arch/quark/refs/heads/: main
installer/arch/quark/refs/tags/: v1.0.10  v1.0.11  v1.0.13  v1.0.14  v1.0.15  v1.0.9
installer/linux/: quark.spec
installer/windows/: EnvVarUpdate.nsh  quark.nsi
quark-chat/: Cargo.toml
quark-chat/src/: main.rs
quark-cli/: Cargo.toml
quark-cli/src/: main.rs
quark-code/: Cargo.toml  build.rs
quark-code/src/: agent.rs  app.rs  context.rs  main.rs  tools.rs  tui.rs
quark-core/: Cargo.toml
quark-core/scripts/: hf_download.py
quark-core/src/: lib.rs  mcp.rs  paths.rs  updater.rs
quark-core/src/checkpoint/: hf_import.rs  mod.rs  safetensors.rs
quark-core/src/data/: batch.rs  hf_downloader.rs  loader.rs  mod.rs  packing.rs  pile.rs  stats.rs
quark-core/src/inference/: cache.rs  generate.rs  mod.rs  sampling.rs
quark-core/src/memory/: budget.rs  mod.rs  registry.rs  tier.rs
quark-core/src/model/: attention.rs  block.rs  config.rs  ffn.rs  mod.rs  moe.rs  norm.rs  quark.rs
quark-core/src/tokenizer/: bpe.rs  mod.rs
quark-core/src/training/: adamw.rs  grad_clip.rs  lora.rs  lr_schedule.rs  metrics.rs  mod.rs  trainer.rs
quark-gui/: Cargo.toml  build.rs
quark-gui/src/: app.rs  main.rs
quark-gui/src/panels/: chat.rs  checkpoints.rs  config.rs  dataset.rs  export.rs  getting_started.rs  mod.rs  settings.rs  training.rs
