[package]
name        = "quark-cli"
description = "Headless CLI for Quark LLM training and inference"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "quark-cli"
path = "src/main.rs"

[features]
default = ["backend-cpu"]
backend-cpu  = ["quark-core/backend-cpu"]
backend-cuda = ["quark-core/backend-cuda"]
backend-wgpu = ["quark-core/backend-wgpu"]

[dependencies]
quark-core = { path = "../quark-core", default-features = false }
tokio      = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
dirs       = { workspace = true }
