[package]
name        = "quark-code"
description = "Quark Code — terminal AI coding agent powered by a local Quark model"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "quark-code"
path = "src/main.rs"

[features]
default      = ["backend-cpu"]
backend-cpu  = ["quark-core/backend-cpu"]
backend-cuda = ["quark-core/backend-cuda"]
backend-wgpu = ["quark-core/backend-wgpu"]

[dependencies]
quark-core   = { path = "../quark-core", default-features = false }
ratatui      = { workspace = true }
crossterm    = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
dirs         = { workspace = true }
rand         = { workspace = true }
